--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,17 @@
 
 header {
   background-color: #d4d4d4; }
+  header img {
+    min-width: 100px;
+    max-width: 150px;
+    margin: 1rem 0;
+    animation: entradaLogo 2s 0.4s; }
+
+@keyframes entradaLogo {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 footer {
   background-color: #d4d4d4;
@@ -148,7 +159,7 @@ span {
   max-width: 600px; }
 
 .textoMision {
-  max-width: 700px; }
+  max-width: 900px; }
 
 .imgClientes {
   width: 90%;
